add URL to compendium 11

--- a/lesson_11/compendium/index.html
+++ b/lesson_11/compendium/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 
-Lesson 11       BOM JSON (S,L)storage Cookie
+Lesson 11       BOM JSON (S,L)storage Cookie URL
 
 // Browser Object Model
+// URL
 // JSON JavaScriptObjectNotation
 // Session storage
 // Local storage
