Redancy test task

--- a/lesson_12/classWork/index.html
+++ b/lesson_12/classWork/index.html
@@ -56,7 +56,7 @@
         });
 
     //Как это можно разложит на составляющие, на функции?
-    //Хочу этот набор кода более читаемым.
+    //Хочу этот кусок набранного кода более читаемым.
 
 </script>
 
